[package]
name = "hdr-launcher"
version = "0.1.0"
authors = ["HDR Development Team"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline-config = { git = "https://github.com/skyline-rs/skyline-config" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
pulldown-cmark = "0.9.1"
hound = "3.4.0"
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }
semver = "1.0.6"
curl-sys = { git = "https://github.com/blu-dev/curl-rust", default-features = false }
md5 = "0.7.0"
walkdir = "2"
ninput = { git = "https://github.com/blu-dev/ninput" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
online = { version = "3.0.1",  default-features = false, features = ["sync"] }

[patch.crates-io]
ring = { git = "https://github.com/skyline-rs/ring", branch = "0.16.20" }
webpki = { git = "https://github.com/skyline-rs/webpki" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
